# mushrasp

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/mushroom/mushlibrary/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mushroom/mushlibrary/: MainActivity.java
app/src/main/res/raw/: fullchain.der
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mushroom/mushlibrary/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
mushrasp/: build.gradle  proguard-rules.pro
mushrasp/src/androidTest/java/com/mushroom/rasp/: ExampleInstrumentedTest.java
mushrasp/src/main/cpp/: CMakeLists.txt  EmulatorDetect.cpp  EmulatorDetect.h  FridaDetect.cpp  FridaDetect.h  Log.cpp  Log.h  MushEnvironment.cpp  MushEnvironment.h  SecureAPI.cpp  SecureAPI.h  Signature.cpp  root.cpp  root.h
mushrasp/src/main/java/com/mushroom/rasp/: CustomTrustManager.java  SslPinningRequest.java  verify.java
mushrasp/src/test/java/com/mushroom/rasp/: ExampleUnitTest.java
